--- a/QQ-conf-IP-CIDR.conf
+++ b/QQ-conf-IP-CIDR.conf
@@ -3,3 +3,4 @@ IP-CIDR,104.71.48.254/32,DIRECT
 IP-CIDR,43.154.254.32/32,DIRECT
 IP-CIDR,43.154.254.144/32,DIRECT
 IP-CIDR,43.135.106.179/32,DIRECT
+IP-CIDR,23.222.244.252/32,DIRECT
