--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -1,3 +1,5 @@
+DOMAIN-KEYWORD,wechat,DIRECT
+DOMAIN,wx.tenpay.com,DIRECT
 IP-CIDR,43.156.222.154/32,DIRECT
 IP-CIDR,43.156.222.210/32,DIRECT
 IP-CIDR,129.226.3.47/32,DIRECT
