--- a/Extra-Direct.conf
+++ b/Extra-Direct.conf
@@ -3,5 +3,6 @@ DOMAIN,sgminorshort.wechat.com,DIRECT
 DOMAIN,sgshort.wechat.com,DIRECT
 DOMAIN,wxapp.tc.qq.com,DIRECT
 DOMAIN,zhihu.com,DIRECT
+DOMAIN,wxapp.tc.qq.com,DIRECT
 
 
