--- a/Extra-Direct.conf
+++ b/Extra-Direct.conf
@@ -1,8 +1,9 @@
 DOMAIN,lucius.ltd,DIRECT
-DOMAIN,sgminorshort.wechat.com,DIRECT
-DOMAIN,sgshort.wechat.com,DIRECT
 DOMAIN,wxapp.tc.qq.com,DIRECT
+; 知乎域名
 DOMAIN,zhihu.com,DIRECT
 DOMAIN,wxapp.tc.qq.com,DIRECT
+; RayCast Show IP Address 插件
+IP-CIDR,173.231.16.77/32,DIRECT
 
 
