--- a/Extra-Direct.conf
+++ b/Extra-Direct.conf
@@ -2,4 +2,5 @@ DOMAIN,lucius.ltd,DIRECT
 DOMAIN,wxapp.tc.qq.com,DIRECT
 DOMAIN,zhihu.com,DIRECT
 DOMAIN,wxapp.tc.qq.com,DIRECT
+DOMAIN,immersivetranslate.com,DIRECT
 IP-CIDR,173.231.16.77/32,DIRECT
