--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -6,6 +6,7 @@ IP-CIDR,129.226.3.47/32,DIRECT
 IP-CIDR,43.156.222.216/32,DIRECT
 IP-CIDR,43.129.255.246/32,DIRECT
 IP-CIDR,43.129.255.26/32,DIRECT
+IP-CIDR,43.129.254.147/32,DIRECT
 IP-CIDR,43.128.17.59/32,DIRECT
 IP-CIDR,43.154.240.187/32,DIRECT
 IP-CIDR,43.153.248.120/32,DIRECT
