--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -10,6 +10,8 @@ IP-CIDR,43.128.17.59/32,DIRECT
 IP-CIDR,43.154.240.187/32,DIRECT
 IP-CIDR,43.153.248.120/32,DIRECT
 IP-CIDR,43.156.222.165/32,DIRECT
+IP-CIDR,43.154.254.66/32,DIRECT
+IP-CIDR,43.154.254.109/32,DIRECT
 IP-CIDR,101.32.104.41/32,DIRECT
 IP-CIDR,101.32.118.25/32,DIRECT
 IP-CIDR,101.32.104.4/32,DIRECT
