--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -12,10 +12,14 @@ IP-CIDR,43.153.248.120/32,DIRECT
 IP-CIDR,43.156.222.165/32,DIRECT
 IP-CIDR,43.154.254.66/32,DIRECT
 IP-CIDR,43.154.254.109/32,DIRECT
+IP-CIDR,43.154.254.204/32,DIRECT
+IP-CIDR,43.152.112.190/32,DIRECT
 IP-CIDR,101.32.104.41/32,DIRECT
 IP-CIDR,101.32.118.25/32,DIRECT
 IP-CIDR,101.32.104.4/32,DIRECT
 IP-CIDR,101.32.104.41/32,DIRECT
+IP-CIDR,101.33.110.204/32,DIRECT
+IP-CIDR,101.33.110.28/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,129.226.3.47/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
