--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -15,6 +15,7 @@ IP-CIDR,43.154.254.109/32,DIRECT
 IP-CIDR,43.154.254.204/32,DIRECT
 IP-CIDR,43.152.112.190/32,DIRECT
 IP-CIDR,101.32.104.41/32,DIRECT
+IP-CIDR,101.33.110.179/32,DIRECT
 IP-CIDR,101.32.118.25/32,DIRECT
 IP-CIDR,101.32.104.4/32,DIRECT
 IP-CIDR,101.32.104.41/32,DIRECT
