--- a/Extra-Direct.conf
+++ b/Extra-Direct.conf
@@ -3,4 +3,5 @@ DOMAIN,wxapp.tc.qq.com,DIRECT
 DOMAIN,zhihu.com,DIRECT
 DOMAIN,wxapp.tc.qq.com,DIRECT
 DOMAIN,immersivetranslate.com,DIRECT
+DOMAIN,api.opencat.app,DIRECT
 IP-CIDR,173.231.16.77/32,DIRECT
