wechat 新加一条规则

--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -1,5 +1,6 @@
 DOMAIN-KEYWORD,wechat,DIRECT
 DOMAIN,wx.tenpay.com,DIRECT
+IP-CIDR,101.32.133.53/32,DIRECT
 IP-CIDR,43.156.222.154/32,DIRECT
 IP-CIDR,43.156.222.210/32,DIRECT
 IP-CIDR,43.156.222.216/32,DIRECT
