--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -15,6 +15,9 @@ IP-CIDR,43.154.254.66/32,DIRECT
 IP-CIDR,43.154.254.109/32,DIRECT
 IP-CIDR,43.154.254.204/32,DIRECT
 IP-CIDR,43.152.112.190/32,DIRECT
+IP-CIDR,43.160.144.10/32,DIRECT
+IP-CIDR,43.160.144.13/32,DIRECT
+IP-CIDR,43.160.144.24/32,DIRECT
 IP-CIDR,101.32.104.41/32,DIRECT
 IP-CIDR,101.33.110.179/32,DIRECT
 IP-CIDR,101.32.118.25/32,DIRECT
@@ -22,6 +25,9 @@ IP-CIDR,101.32.104.4/32,DIRECT
 IP-CIDR,101.32.104.41/32,DIRECT
 IP-CIDR,101.33.110.204/32,DIRECT
 IP-CIDR,101.33.110.28/32,DIRECT
+IP-CIDR,106.39.206.25/32,DIRECT
+IP-CIDR,123.151.48.208/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,129.226.3.47/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
+IP-CIDR,180.101.242.212/32,DIRECT
