--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -31,3 +31,4 @@ IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,129.226.3.47/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,180.101.242.212/32,DIRECT
+IP-CIDR,183.60.159.183/32,DIRECT
