--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -26,6 +26,7 @@ IP-CIDR,101.32.104.41/32,DIRECT
 IP-CIDR,101.33.110.204/32,DIRECT
 IP-CIDR,101.33.110.28/32,DIRECT
 IP-CIDR,106.39.206.25/32,DIRECT
+IP-CIDR,113.240.76.212/32,DIRECT
 IP-CIDR,123.151.48.208/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,129.226.3.47/32,DIRECT
