--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -1,5 +1,6 @@
 DOMAIN-KEYWORD,wechat,DIRECT
 DOMAIN,wx.tenpay.com,DIRECT
+DOMAIN,mmbiz.qpic.cn,DIRECT
 IP-CIDR,101.32.133.53/32,DIRECT
 IP-CIDR,43.156.222.154/32,DIRECT
 IP-CIDR,43.156.222.210/32,DIRECT
@@ -25,11 +26,15 @@ IP-CIDR,101.32.104.4/32,DIRECT
 IP-CIDR,101.32.104.41/32,DIRECT
 IP-CIDR,101.33.110.204/32,DIRECT
 IP-CIDR,101.33.110.28/32,DIRECT
+IP-CIDR,106.39.206.21/32,DIRECT
 IP-CIDR,106.39.206.25/32,DIRECT
+IP-CIDR,113.240.76.147/32,DIRECT
 IP-CIDR,113.240.76.212/32,DIRECT
+IP-CIDR,117.24.174.61/32,DIRECT
 IP-CIDR,123.151.48.208/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,129.226.3.47/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,180.101.242.212/32,DIRECT
 IP-CIDR,183.60.159.183/32,DIRECT
+
