--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -1,6 +1,8 @@
 DOMAIN-KEYWORD,wechat,DIRECT
 DOMAIN,wx.tenpay.com,DIRECT
+DOMAIN,wxapp.tc.qq.com,DIRECT
 DOMAIN,mmbiz.qpic.cn,DIRECT
+DOMAIN,dldir1v6.qq.com,DIRECT
 IP-CIDR,101.32.133.53/32,DIRECT
 IP-CIDR,43.156.222.154/32,DIRECT
 IP-CIDR,43.156.222.210/32,DIRECT
@@ -36,5 +38,7 @@ IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,129.226.3.47/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,180.101.242.212/32,DIRECT
+IP-CIDR,183.60.159.124/32,DIRECT
 IP-CIDR,183.60.159.183/32,DIRECT
+
 
