--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -1,5 +1,6 @@
 DOMAIN-KEYWORD,wechat,DIRECT
 DOMAIN,wx.tenpay.com,DIRECT
+DOMAIN,wx.logo.cn,DIRECT
 DOMAIN,wxapp.tc.qq.com,DIRECT
 DOMAIN,mmbiz.qpic.cn,DIRECT
 DOMAIN,dldir1v6.qq.com,DIRECT
