--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -1,6 +1,7 @@
 DOMAIN-KEYWORD,wechat,DIRECT
 DOMAIN,wx.tenpay.com,DIRECT
 DOMAIN,wx.logo.cn,DIRECT
+DOMAIN,wx.qlogo.cn,DIRECT
 DOMAIN,wxapp.tc.qq.com,DIRECT
 DOMAIN,mmbiz.qpic.cn,DIRECT
 DOMAIN,dldir1v6.qq.com,DIRECT
