--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -34,6 +34,7 @@ IP-CIDR,106.39.206.21/32,DIRECT
 IP-CIDR,106.39.206.25/32,DIRECT
 IP-CIDR,113.240.76.147/32,DIRECT
 IP-CIDR,113.240.76.154/32,DIRECT
+IP-CIDR,113.240.76.174/32,DIRECT
 IP-CIDR,113.240.76.212/32,DIRECT
 IP-CIDR,117.24.174.61/32,DIRECT
 IP-CIDR,123.151.48.208/32,DIRECT
