--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -43,6 +43,7 @@ IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,129.226.3.47/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,180.101.242.212/32,DIRECT
+IP-CIDR,183.60.159.57/32,DIRECT
 IP-CIDR,183.60.159.124/32,DIRECT
 IP-CIDR,183.60.159.183/32,DIRECT
 IP-CIDR,183.61.254.83/32,DIRECT
