--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -33,6 +33,7 @@ IP-CIDR,101.33.110.204/32,DIRECT
 IP-CIDR,101.33.110.28/32,DIRECT
 IP-CIDR,106.39.206.21/32,DIRECT
 IP-CIDR,106.39.206.25/32,DIRECT
+IP-CIDR,113.240.75.193/32,DIRECT
 IP-CIDR,113.240.76.147/32,DIRECT
 IP-CIDR,113.240.76.154/32,DIRECT
 IP-CIDR,113.240.76.174/32,DIRECT
