更新默认Direct配置文件

--- a/Extra-Direct.conf
+++ b/Extra-Direct.conf
@@ -2,6 +2,5 @@ DOMAIN,lucius.ltd,DIRECT
 DOMAIN,zhihu.com,DIRECT
 DOMAIN,immersivetranslate.com,DIRECT
 DOMAIN,api.opencat.app,DIRECT
-DOMAIN,api.updf.com,DIRECT
-DOMAIN,apis.updf.com,DIRECT
+DOMAIN-SUFFIX,updf.com,DIRECT
 IP-CIDR,173.231.16.77/32,DIRECT
