--- a/Extra-Direct.conf
+++ b/Extra-Direct.conf
@@ -1,6 +1,7 @@
 DOMAIN,lucius.ltd,DIRECT
 DOMAIN,zhihu.com,DIRECT
 DOMAIN,immersivetranslate.com,DIRECT
+DOMAIN,firebase-settings.crashlytics.com,DIRECT
 DOMAIN,api.opencat.app,DIRECT
 DOMAIN-SUFFIX,updf.com,DIRECT
 IP-CIDR,173.231.16.77/32,DIRECT
