--- a/JetBrains.conf
+++ b/JetBrains.conf
@@ -2,3 +2,4 @@ DOMAIN-SUFFIX,intellij.net,DIRECT
 DOMAIN-SUFFIX,jetbrains.com.cn,DIRECT
 DOMAIN-SUFFIX,jetbrains.com,DIRECT
 DOMAIN-SUFFIX,jetbrains.com,DIRECT
+DOMAIN-SUFFIX,toolbox.app,DIRECT
