--- a/Extra-Direct.conf
+++ b/Extra-Direct.conf
@@ -5,3 +5,6 @@ DOMAIN,firebase-settings.crashlytics.com,DIRECT
 DOMAIN,api.opencat.app,DIRECT
 DOMAIN-SUFFIX,updf.com,DIRECT
 IP-CIDR,173.231.16.77/32,DIRECT
+DOMAIN-SUFFIX,ant.design,DIRECT
+DOMAIN-SUFFIX,crestv.com,DIRECT
+DOMAIN-SUFFIX,1password.com,DIRECT
