--- a/Need-US.conf
+++ b/Need-US.conf
@@ -5,3 +5,4 @@ DOMAIN,completion.amazon.com,🇺🇸US
 DOMAIN,fls-na.amazon.com,🇺🇸US
 DOMAIN,s.amazon-adsystem.com,🇺🇸US
 DOMAIN,ocsp.r2m01.amazontrust.com,🇺🇸US
+DOMAIN,chatgpt.com,🇺🇸US
