--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -23,6 +23,7 @@ IP-CIDR,43.154.254.204/32,DIRECT
 IP-CIDR,43.152.112.190/32,DIRECT
 IP-CIDR,43.160.144.10/32,DIRECT
 IP-CIDR,43.160.144.13/32,DIRECT
+IP-CIDR,43.160.144.21/32,DIRECT
 IP-CIDR,43.160.144.24/32,DIRECT
 IP-CIDR,101.32.104.41/32,DIRECT
 IP-CIDR,101.33.110.179/32,DIRECT
