--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -41,10 +41,12 @@ IP-CIDR,113.240.76.174/32,DIRECT
 IP-CIDR,113.240.76.212/32,DIRECT
 IP-CIDR,117.24.174.61/32,DIRECT
 IP-CIDR,123.151.48.208/32,DIRECT
+IP-CIDR,124.225.191.16/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,129.226.3.47/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,180.101.242.212/32,DIRECT
+IP-CIDR,180.101.242.227/32,DIRECT
 IP-CIDR,183.60.159.57/32,DIRECT
 IP-CIDR,183.60.159.124/32,DIRECT
 IP-CIDR,183.60.159.183/32,DIRECT
