Add new IPs to WeChat and a domain suffix rule to QQ config files.

--- a/QQ-conf-IP-CIDR.conf
+++ b/QQ-conf-IP-CIDR.conf
@@ -5,3 +5,4 @@ IP-CIDR,43.154.254.144/32,DIRECT
 IP-CIDR,43.135.106.179/32,DIRECT
 IP-CIDR,23.222.244.252/32,DIRECT
 IP-CIDR,43.154.240.13/32,DIRECT
+DOMAIN-SUFFIX,qq.com,DIRECT,DIRECT
