--- a/wechat-conf-IP-CIDR.conf
+++ b/wechat-conf-IP-CIDR.conf
@@ -40,7 +40,9 @@ IP-CIDR,113.240.76.154/32,DIRECT
 IP-CIDR,113.240.76.174/32,DIRECT
 IP-CIDR,113.240.76.212/32,DIRECT
 IP-CIDR,117.24.174.61/32,DIRECT
+IP-CIDR,123.151.48.193/32,DIRECT
 IP-CIDR,123.151.48.208/32,DIRECT
+IP-CIDR,124.225.189.82/32,DIRECT
 IP-CIDR,124.225.191.16/32,DIRECT
 IP-CIDR,129.226.107.29/32,DIRECT
 IP-CIDR,129.226.3.47/32,DIRECT
