Add IP and domain rules for Tencent and correct existing entries.

--- a/QQ-conf-IP-CIDR.conf
+++ b/QQ-conf-IP-CIDR.conf
@@ -5,6 +5,8 @@ IP-CIDR,23.222.244.252/32,DIRECT
 IP-CIDR,43.154.240.13/32,DIRECT
 IP-CIDR,104.71.48.254/32,DIRECT
 IP-CIDR,113.105.153.143/32,DIRECT
+IP-CIDR,125.88.187.96/32,DIRECT
 IP-CIDR,129.226.102.247/32,DIRECT
 IP-CIDR,183.60.230.202/32,DIRECT
-DOMAIN-SUFFIX,qq.com,DIRECT,DIRECT
+DOMAIN-SUFFIX,qq.com,DIRECT
+DOMAIN-SUFFIX,tencent.com,DIRECT
