Add and update domain rules in Extra-Direct.conf
Added `warehouse.parkson-market.org` to the direct access list and updated several domain suffixes to ensure they are also routed directly, including new entries for `zafinsvc.com`, `zajourney.com`, and `za.group`.
在Extra-Direct.conf中添加和更新域名规则

添加了`warehouse.parkson-market.org`到直接访问列表，并更新了几个域名后缀以确保它们也被直接路由，包括为`zafinsvc.com`、`zajourney.com`和`za.group`新增的条目。

--- a/Extra-Direct.conf
+++ b/Extra-Direct.conf
@@ -1,3 +1,4 @@
+DOMAIN,warehouse.parkson-market.org,DIRECT
 DOMAIN,lucius.ltd,DIRECT
 DOMAIN,zhihu.com,DIRECT
 DOMAIN,immersivetranslate.com,DIRECT
@@ -9,3 +10,6 @@ IP-CIDR,5.9.243.187/32,DIRECT
 DOMAIN-SUFFIX,ant.design,DIRECT
 DOMAIN-SUFFIX,crestv.com,DIRECT
 DOMAIN-SUFFIX,1password.com,DIRECT
+DOMAIN-SUFFIX,zafinsvc.com,DIRECT
+DOMAIN-SUFFIX,zajourney.com,DIRECT
+DOMAIN-SUFFIX,za.group,DIRECT
