--- a/Line.conf
+++ b/Line.conf
@@ -1,2 +1,2 @@
-DOMAIN-SUFFIX,line-apps.com,🇭🇰HK
-DOMAIN-SUFFIX,line-scdn.net,🇭🇰HK
+DOMAIN-SUFFIX,line-apps.com,📲 Line
+DOMAIN-SUFFIX,line-scdn.net,📲 Line
