Add new IP-CIDR for WhatsApp
Added a new IP-CIDR entry `57.144.161.48/32` with no-resolve to the WhatsApp configuration, while keeping the existing entries intact.

为 WhatsApp 添加新的 IP-CIDR

在保持现有条目不变的情况下，为 WhatsApp 配置添加了一个新的 IP-CIDR 条目 `57.144.161.48/32`，并设置为 no-resolve。

--- a/WhatsApp.conf
+++ b/WhatsApp.conf
@@ -24,3 +24,4 @@ IP-CIDR,208.43.122.128/27,no-resolve
 IP-CIDR,34.224.0.0/12,no-resolve
 IP-CIDR,50.22.198.204/30,no-resolve
 IP-CIDR,54.242.0.0/15,no-resolve
+IP-CIDR,57.144.161.48/32,no-resolve
