Add and update domain rules for direct and Google configurations
Added new domain suffixes for `caixin.cn` and `caixin.com` in `Extra-Direct.conf` and expanded the list of Google-related domain suffixes in `Google.conf`. Removed `Need-Reject.conf` and `Need-US.conf` as they are no longer needed.

添加和更新直接和谷歌配置的域名规则

在 `Extra-Direct.conf` 中添加了新的域名后缀 `caixin.cn` 和 `caixin.com`,并在 `Google.conf` 中扩展了与谷歌相关的域名后缀列表。删除了 `Need-Reject.conf` 和 `Need-US.conf`,因为它们不再需要。

--- a/Extra-Direct.conf
+++ b/Extra-Direct.conf
@@ -5,6 +5,8 @@ DOMAIN,immersivetranslate.com,DIRECT
 DOMAIN,firebase-settings.crashlytics.com,DIRECT
 DOMAIN,api.opencat.app,DIRECT
 DOMAIN-SUFFIX,updf.com,DIRECT
+DOMAIN-SUFFIX,caixin.cn,DIRECT
+DOMAIN-SUFFIX,caixin.com,DIRECT
 IP-CIDR,173.231.16.77/32,DIRECT
 IP-CIDR,5.9.243.187/32,DIRECT
 DOMAIN-SUFFIX,ant.design,DIRECT
