--- a/Google.conf
+++ b/Google.conf
@@ -1,4 +1,11 @@
 DOMAIN,voice.telephony.goog
+DOMAIN-SUFFIX,com.google
+DOMAIN-SUFFIX,crisisresponse.google
+DOMAIN-SUFFIX,design.google
+DOMAIN-SUFFIX,dns.google
+DOMAIN-SUFFIX,domains.google
+DOMAIN-SUFFIX,environment.google
+
 DOMAIN-SUFFIX,0emm.com
 DOMAIN-SUFFIX,1e100.net
 DOMAIN-SUFFIX,1ucrs.com
@@ -19,6 +26,7 @@ DOMAIN-SUFFIX,advertiserscommunity.com
 DOMAIN-SUFFIX,adwords-community.com
 DOMAIN-SUFFIX,adwords.com
 DOMAIN-SUFFIX,adwordsexpress.com
+DOMAIN-SUFFIX,agoogleaday.com
 DOMAIN-SUFFIX,ai.ytimg.com
 DOMAIN-SUFFIX,amp.dev
 DOMAIN-SUFFIX,ampproject.com
@@ -150,7 +158,9 @@ DOMAIN-SUFFIX,chromeexperiments.com
 DOMAIN-SUFFIX,chromeos.dev
 DOMAIN-SUFFIX,chromercise.com
 DOMAIN-SUFFIX,chromestatus.com
+DOMAIN-SUFFIX,chromeenterprise.google
 DOMAIN-SUFFIX,chromium.org
+DOMAIN-SUFFIX,nic.google
 DOMAIN-SUFFIX,chronicle.security
 DOMAIN-SUFFIX,chroniclesec.com
 DOMAIN-SUFFIX,clickserve.cc-dt.com
@@ -255,9 +265,12 @@ DOMAIN-SUFFIX,googl.com
 DOMAIN-SUFFIX,google-analytics-cn.com
 DOMAIN-SUFFIX,google-analytics.com
 DOMAIN-SUFFIX,google-syndication.com
+DOMAIN-SUFFIX,google.ac
 DOMAIN-SUFFIX,google.ad
 DOMAIN-SUFFIX,google.ae
+DOMAIN-SUFFIX,google.af
 DOMAIN-SUFFIX,google.al
+DOMAIN-SUFFIX,google.ai
 DOMAIN-SUFFIX,google.am
 DOMAIN-SUFFIX,google.as
 DOMAIN-SUFFIX,google.at
@@ -343,6 +356,7 @@ DOMAIN-SUFFIX,google.com.na
 DOMAIN-SUFFIX,google.com.ng
 DOMAIN-SUFFIX,google.com.ni
 DOMAIN-SUFFIX,google.com.np
+DOMAIN-SUFFIX,google.com.nf
 DOMAIN-SUFFIX,google.com.om
 DOMAIN-SUFFIX,google.com.pa
 DOMAIN-SUFFIX,google.com.pe
@@ -374,6 +388,7 @@ DOMAIN-SUFFIX,google.dm
 DOMAIN-SUFFIX,google.dz
 DOMAIN-SUFFIX,google.ee
 DOMAIN-SUFFIX,google.es
+DOMAIN-SUFFIX,google.eu
 DOMAIN-SUFFIX,google.fi
 DOMAIN-SUFFIX,google.fm
 DOMAIN-SUFFIX,google.fr
@@ -384,7 +399,9 @@ DOMAIN-SUFFIX,google.gl
 DOMAIN-SUFFIX,google.gm
 DOMAIN-SUFFIX,google.gr
 DOMAIN-SUFFIX,google.gy
+DOMAIN-SUFFIX,google.gp
 DOMAIN-SUFFIX,google.hn
+DOMAIN-SUFFIX,google.hk
 DOMAIN-SUFFIX,google.hr
 DOMAIN-SUFFIX,google.ht
 DOMAIN-SUFFIX,google.hu
@@ -393,6 +410,7 @@ DOMAIN-SUFFIX,google.im
 DOMAIN-SUFFIX,google.iq
 DOMAIN-SUFFIX,google.is
 DOMAIN-SUFFIX,google.it
+DOMAIN-SUFFIX,google.it.ao
 DOMAIN-SUFFIX,google.je
 DOMAIN-SUFFIX,google.jo
 DOMAIN-SUFFIX,google.kg
@@ -446,10 +464,15 @@ DOMAIN-SUFFIX,google.tm
 DOMAIN-SUFFIX,google.tn
 DOMAIN-SUFFIX,google.to
 DOMAIN-SUFFIX,google.tt
+DOMAIN-SUFFIX,google.tk
 DOMAIN-SUFFIX,google.ventures
 DOMAIN-SUFFIX,google.vg
+DOMAIN-SUFFIX,google.vn
 DOMAIN-SUFFIX,google.vu
 DOMAIN-SUFFIX,google.ws
+DOMAIN-SUFFIX,google.us
+DOMAIN-SUFFIX,googlechinawebmaster.com
+DOMAIN-SUFFIX,googleartproject.com
 DOMAIN-SUFFIX,googleacquisitionmigration.com
 DOMAIN-SUFFIX,googleadapis.com
 DOMAIN-SUFFIX,googleadservices-cn.com
@@ -477,6 +500,8 @@ DOMAIN-SUFFIX,googlefiber.com
 DOMAIN-SUFFIX,googlefiber.net
 DOMAIN-SUFFIX,googlefinland.com
 DOMAIN-SUFFIX,googleflights-cn.net
+DOMAIN-SUFFIX,googlegroups.com
+DOMAIN-SUFFIX,googlehosted.com
 DOMAIN-SUFFIX,googlemail.com
 DOMAIN-SUFFIX,googlemaps.com
 DOMAIN-SUFFIX,googlemashups.com
@@ -501,9 +526,15 @@ DOMAIN-SUFFIX,googletraveladservices-cn.com
 DOMAIN-SUFFIX,googletraveladservices.com
 DOMAIN-SUFFIX,googlevads-cn.com
 DOMAIN-SUFFIX,googleventures.com
+DOMAIN-SUFFIX,googlevideo.com
+DOMAIN-SUFFIX,googleweblight.com
+DOMAIN-SUFFIX,googleideas.com
+DOMAIN-SUFFIX,googlelabs.com
+DOMAIN-SUFFIX,googleinsidesearch.com
 DOMAIN-SUFFIX,googlr.com
 DOMAIN-SUFFIX,goolge.com
 DOMAIN-SUFFIX,gooogle.com
+DOMAIN-SUFFIX,googlezip.net
 DOMAIN-SUFFIX,gridaware.app
 DOMAIN-SUFFIX,gsrc.io
 DOMAIN-SUFFIX,gstatic-cn.com
@@ -511,6 +542,7 @@ DOMAIN-SUFFIX,gstatic.cn
 DOMAIN-SUFFIX,gstatic.com
 DOMAIN-SUFFIX,gstaticcnapps.cn
 DOMAIN-SUFFIX,gsuite.com
+DOMAIN-SUFFIX,googlesile.com
 DOMAIN-SUFFIX,gv.com
 DOMAIN-SUFFIX,gvt0.com
 DOMAIN-SUFFIX,gvt1-cn.com
@@ -520,6 +552,7 @@ DOMAIN-SUFFIX,gvt5.com
 DOMAIN-SUFFIX,gvt6.com
 DOMAIN-SUFFIX,gvt7.com
 DOMAIN-SUFFIX,gvt9.com
+DOMAIN-SUFFIX,grow.google
 DOMAIN-SUFFIX,gwtproject.org
 DOMAIN-SUFFIX,hdrplusdata.org
 DOMAIN-SUFFIX,hey.gle
@@ -542,6 +575,7 @@ DOMAIN-SUFFIX,keytransparency.foo
 DOMAIN-SUFFIX,keytransparency.org
 DOMAIN-SUFFIX,lanternal.com
 DOMAIN-SUFFIX,like.com
+DOMAIN-SUFFIX,lers.google
 DOMAIN-SUFFIX,madewithcode.com
 DOMAIN-SUFFIX,material.io
 DOMAIN-SUFFIX,mdialog.com
@@ -564,11 +598,13 @@ DOMAIN-SUFFIX,on2.com
 DOMAIN-SUFFIX,onefifteen.net
 DOMAIN-SUFFIX,onefifteen.org
 DOMAIN-SUFFIX,oneworldmanystories.com
+DOMAIN-SUFFIX,opensource.google
 DOMAIN-SUFFIX,opensourceinsight.dev
 DOMAIN-SUFFIX,opensourceinsights.dev
 DOMAIN-SUFFIX,openthread.io
 DOMAIN-SUFFIX,openweave.io
 DOMAIN-SUFFIX,orbitera.com
+DOMAIN-SUFFIX,passwords.google
 DOMAIN-SUFFIX,page.link
 DOMAIN-SUFFIX,pagespeedmobilizer.com
 DOMAIN-SUFFIX,pageview.mobi
@@ -587,6 +623,7 @@ DOMAIN-SUFFIX,plus.codes
 DOMAIN-SUFFIX,polymer-project.org
 DOMAIN-SUFFIX,polymerproject.org
 DOMAIN-SUFFIX,postini.com
+DOMAIN-SUFFIX,pride.google
 DOMAIN-SUFFIX,privacysandbox.com
 DOMAIN-SUFFIX,prod-controlbe.floonet.goog
 DOMAIN-SUFFIX,prod-databe.floonet.goog
@@ -619,9 +656,13 @@ DOMAIN-SUFFIX,redirector.gvt1.com
 DOMAIN-SUFFIX,redirector.offline-maps.gvt1.com
 DOMAIN-SUFFIX,redirector.snap.gvt1.com
 DOMAIN-SUFFIX,registry.google
+DOMAIN-SUFFIX,research.google
 DOMAIN-SUFFIX,revolv.com
 DOMAIN-SUFFIX,ridepenguin.com
 DOMAIN-SUFFIX,run.app
+DOMAIN-SUFFIX,sustainability.google
+DOMAIN-SUFFIX,stories.google
+DOMAIN-SUFFIX,safety.google
 DOMAIN-SUFFIX,savethedate.foo
 DOMAIN-SUFFIX,saynow.com
 DOMAIN-SUFFIX,scanservice1.qatp1.net
@@ -671,6 +712,7 @@ DOMAIN-SUFFIX,verilylifesciences.com
 DOMAIN-SUFFIX,verilystudyhub.com
 DOMAIN-SUFFIX,verilystudywatch.com
 DOMAIN-SUFFIX,verilystudywatch.org
+DOMAIN-SUFFIX,tv.google
 DOMAIN-SUFFIX,wallet.com
 DOMAIN-SUFFIX,waveprotocol.org
 DOMAIN-SUFFIX,waymo.com
@@ -707,6 +749,8 @@ DOMAIN-SUFFIX,zukunftswerkstatt.de
 DOMAIN-SUFFIX,zynamics.com
 DOMAIN-SUFFIX,googledrive.com
 DOMAIN-SUFFIX,googleusercontent.com
+DOMAIN-SUFFIX,about.google
+DOMAIN-SUFFIX,ai.google
 DOMAIN-KEYWORD,appspot
 DOMAIN-KEYWORD,blogspot
 DOMAIN-KEYWORD,gmail
