Update domain rules and move entries
Reorganized the domain suffixes in FinancialInstitution.conf, ProxyList.conf, and OpenAI.conf, including re-adding and removing specific domains to better reflect their categorization and proxy requirements.

 更新域名规则并移动条目

 在FinancialInstitution.conf、ProxyList.conf 和 OpenAI.conf 中重新组织了域名后缀，包括重新添加和删除特定域名，以更好地反映它们的分类和代理需求。

--- a/BaseRule/FinancialInstitution.conf
+++ b/BaseRule/FinancialInstitution.conf
@@ -6,3 +6,8 @@ DOMAIN-SUFFIX,za.group
 #BOC CN
 DOMAIN-SUFFIX,boc.cn
 DOMAIN-SUFFIX,bochk.com
+
+
+# 有争议（是否需要代理）
+# Controversial (whether a proxy is needed)
+DOMAIN-SUFFIX,stripe.com
