Add stripeassets.com to the domain list
This change includes `stripeassets.com` in addition to `stripe.com` within the domain suffix list, ensuring broader coverage for financial institution rules.

将 stripeassets.com 添加到域名列表中

此次更改包括在域名后缀列表中添加 `stripeassets.com`，除了 `stripe.com` 之外，以确保对金融机构规则有更广泛的覆盖。

--- a/BaseRule/FinancialInstitution.conf
+++ b/BaseRule/FinancialInstitution.conf
@@ -11,3 +11,4 @@ DOMAIN-SUFFIX,bochk.com
 # 有争议（是否需要代理）
 # Controversial (whether a proxy is needed)
 DOMAIN-SUFFIX,stripe.com
+DOMAIN-SUFFIX,stripeassets.com
