Update domain list for FinancialInstitution
Added `stripecdn.com` and `stripe.network` to the domain list, and re-added `stripeassets.com` which was previously removed.

更新金融机构的域名列表

添加了 `stripecdn.com` 和 `stripe.network` 到域名列表，并重新添加了之前被移除的 `stripeassets.com`。

--- a/BaseRule/FinancialInstitution.conf
+++ b/BaseRule/FinancialInstitution.conf
@@ -12,3 +12,5 @@ DOMAIN-SUFFIX,bochk.com
 # Controversial (whether a proxy is needed)
 DOMAIN-SUFFIX,stripe.com
 DOMAIN-SUFFIX,stripeassets.com
+DOMAIN-SUFFIX,stripecdn.com
+DOMAIN-SUFFIX,stripe.network
