--- a/Video/HBOMAX.conf
+++ b/Video/HBOMAX.conf
@@ -1,1 +1,5 @@
 DOMAIN-SUFFIX,max.com
+DOMAIN-SUFFIX,msecnd.net
+DOMAIN-SUFFIX,discomax.com
+DOMAIN-SUFFIX,litix.io
+IP-CIDR,13.248.139.174/32,no-resolve
