Update domain lists for Notion, BaseRule, and OpenAI
Added `gist.build` to Notion's domain list, included `sentry.io` in BaseRule's ProxyList, and removed redundant `sentry.io` from OpenAI's configuration.

更新了Notion、BaseRule和OpenAI的域名列表

为Notion的域名列表添加了`gist.build`，在BaseRule的代理列表中包含了`sentry.io`，并从OpenAI的配置中移除了多余的`sentry.io`。

--- a/BaseRule/ProxyList.conf
+++ b/BaseRule/ProxyList.conf
@@ -4116,6 +4116,7 @@ DOMAIN-SUFFIX,sethwklein.net
 DOMAIN-SUFFIX,setn.com
 DOMAIN-SUFFIX,settv.com.tw
 DOMAIN-SUFFIX,setty.com.tw
+DOMAIN-SUFFIX,sentry.io
 DOMAIN-SUFFIX,sevenload.com
 DOMAIN-SUFFIX,sex-11.com
 DOMAIN-SUFFIX,sex.com
