Add meituan.net to DirectList
This change includes the domain suffix `meituan.net` in the DirectList configuration, allowing it to be routed directly.

将 `meituan.net` 添加到直连列表

此更改将域名后缀 `meituan.net` 包含在直连列表配置中，允许其直接路由。

--- a/BaseRule/DirectList.conf
+++ b/BaseRule/DirectList.conf
@@ -11,6 +11,7 @@ DOMAIN-SUFFIX,ant.design
 DOMAIN-SUFFIX,opencat.app
 DOMAIN-SUFFIX,updf.com
 DOMAIN-SUFFIX,zhihu.com
+DOMAIN-SUFFIX,meituan.net
 
 IP-CIDR,173.231.16.77/32
 IP-CIDR,5.9.243.187/32
