--- a/Twitter.conf
+++ b/Twitter.conf
@@ -5,3 +5,4 @@ DOMAIN-SUFFIX,twimg.com
 DOMAIN-SUFFIX,twimg.org
 DOMAIN-SUFFIX,x.com
 DOMAIN-SUFFIX,twitter.com
+DOMAIN,browser-intake-datadoghq.com
