Add new domain suffixes to DirectList and ProxyList
This commit adds `steamcontent.com` to the DirectList and `quickconnect.to`, `tipatipa.xyz`, `tmdb.org`, and `t1i.top` to the ProxyList, enhancing the configuration for specific traffic routing.

将新的域名后缀添加到DirectList和ProxyList中

此提交将`steamcontent.com`添加到DirectList中，将`quickconnect.to`、`tipatipa.xyz`、`tmdb.org`和`t1i.top`添加到ProxyList中，增强了特定流量路由的配置。

--- a/BaseRule/DirectList.conf
+++ b/BaseRule/DirectList.conf
@@ -29,6 +29,7 @@ PROCESS-NAME,WebTorrent Helper.exe
 PROCESS-NAME,qbittorrent.exe
 # bt
 DOMAIN-SUFFIX,smtp
+DOMAIN-SUFFIX,steamcontent.com
 DOMAIN-KEYWORD,aria2
 URL-REGEX,(Subject|HELO|SMTP)
 URL-REGEX,(api|ps|sv|offnavi|newvector|ulog.imap|newloc)(.map|).(baidu|n.shifen).com
