--- a/BaseRule/ProxyList.conf
+++ b/BaseRule/ProxyList.conf
@@ -1035,6 +1035,7 @@ DOMAIN-SUFFIX,comparitech.com
 DOMAIN-SUFFIX,compileheart.com
 DOMAIN-SUFFIX,compress.to
 DOMAIN-SUFFIX,compython.net
+DOMAIN-SUFFIX,quickconnect.to
 DOMAIN-SUFFIX,conoha.jp
 DOMAIN-SUFFIX,constitutionalism.solutions
 DOMAIN-SUFFIX,contactmagazine.net
@@ -4751,6 +4752,7 @@ DOMAIN-SUFFIX,tinychat.com
 DOMAIN-SUFFIX,tinypaste.com
 DOMAIN-SUFFIX,tipas.net
 DOMAIN-SUFFIX,tipo.gov.tw
+DOMAIN-SUFFIX,tipatipa.xyz
 DOMAIN-SUFFIX,tistory.com
 DOMAIN-SUFFIX,tkcs-collins.com
 DOMAIN-SUFFIX,tl.gd
@@ -4759,6 +4761,7 @@ DOMAIN-SUFFIX,tmagazine.com
 DOMAIN-SUFFIX,tmdfish.com
 DOMAIN-SUFFIX,tmi.me
 DOMAIN-SUFFIX,tmpp.org
+DOMAIN-SUFFIX,tmdb.org
 DOMAIN-SUFFIX,tnaflix.com
 DOMAIN-SUFFIX,tngrnow.com
 DOMAIN-SUFFIX,tngrnow.net
@@ -4980,6 +4983,7 @@ DOMAIN-SUFFIX,txxx.com
 DOMAIN-SUFFIX,tycool.com
 DOMAIN-SUFFIX,typepad.com
 DOMAIN-SUFFIX,typora.io
+DOMAIN-SUFFIX,t1i.top
 DOMAIN-SUFFIX,u15.info
 DOMAIN-SUFFIX,u9un.com
 DOMAIN-SUFFIX,ub0.cc
