Update domain lists for various configurations
This commit updates the domain lists in multiple configuration files, including `Github.conf`, `Twitter.conf`, `BaseRule/ProxyList.conf`, and `OpenAI.conf`, by adding new domains and ensuring existing ones are correctly placed. These changes aim to enhance the coverage and accuracy of the domain filtering rules.

更新各种配置的域名列表

此次提交更新了多个配置文件中的域名列表，包括 `Github.conf`、`Twitter.conf`、`BaseRule/ProxyList.conf` 和 `OpenAI.conf`，通过添加新域名并确保现有域名正确放置。这些更改旨在增强域名过滤规则的覆盖范围和准确性。

--- a/BaseRule/ProxyList.conf
+++ b/BaseRule/ProxyList.conf
@@ -31,6 +31,7 @@ DOMAIN-SUFFIX,000webhost.com
 DOMAIN-SUFFIX,030buy.com
 DOMAIN-SUFFIX,0rz.tw
 DOMAIN-SUFFIX,1-apple.com.tw
+DOMAIN-SUFFIX,1lib.sk
 DOMAIN-SUFFIX,10.tt
 DOMAIN-SUFFIX,1000giri.net
 DOMAIN-SUFFIX,100ke.org
@@ -274,6 +275,7 @@ DOMAIN-SUFFIX,amazon.com
 DOMAIN-SUFFIX,ameblo.jp
 DOMAIN-SUFFIX,america.gov
 DOMAIN-SUFFIX,american.edu
+DOMAIN-SUFFIX,americanexpress.com
 DOMAIN-SUFFIX,americangreencard.com
 DOMAIN-SUFFIX,americanunfinished.com
 DOMAIN-SUFFIX,americorps.gov
@@ -305,6 +307,7 @@ DOMAIN-SUFFIX,angularjs.org
 DOMAIN-SUFFIX,animecrazy.net
 DOMAIN-SUFFIX,aniscartujo.com
 DOMAIN-SUFFIX,annatam.com
+DOMAIN-SUFFIX,annas-archive.org
 DOMAIN-SUFFIX,anobii.com
 DOMAIN-SUFFIX,anonfiles.com
 DOMAIN-SUFFIX,anontext.com
@@ -359,6 +362,7 @@ DOMAIN-SUFFIX,appsocks.net
 DOMAIN-SUFFIX,appspot.com
 DOMAIN-SUFFIX,appsto.re
 DOMAIN-SUFFIX,aptoide.com
+DOMAIN-SUFFIX,aqycenter.com
 DOMAIN-SUFFIX,archive.fo
 DOMAIN-SUFFIX,archive.is
 DOMAIN-SUFFIX,archive.li
@@ -551,6 +555,7 @@ DOMAIN-SUFFIX,bild.de
 DOMAIN-SUFFIX,biliworld.com
 DOMAIN-SUFFIX,billypan.com
 DOMAIN-SUFFIX,binance.com
+DOMAIN-SUFFIX,binance.org
 DOMAIN-SUFFIX,binux.me
 DOMAIN-SUFFIX,binwang.me
 DOMAIN-SUFFIX,bird.so
@@ -687,6 +692,8 @@ DOMAIN-SUFFIX,btsynckeys.com
 DOMAIN-SUFFIX,budaedu.org
 DOMAIN-SUFFIX,buddhanet.com.tw
 DOMAIN-SUFFIX,buffered.com
+DOMAIN-SUFFIX,bugutv.net
+DOMAIN-SUFFIX,bugutv.org
 DOMAIN-SUFFIX,bullguard.com
 DOMAIN-SUFFIX,bullog.org
 DOMAIN-SUFFIX,bullogger.com
@@ -1066,6 +1073,7 @@ DOMAIN-SUFFIX,crd-net.org
 DOMAIN-SUFFIX,creaders.net
 DOMAIN-SUFFIX,creadersnet.com
 DOMAIN-SUFFIX,creativelab5.com
+DOMAIN-SUFFIX,creamdata.net
 DOMAIN-SUFFIX,cristyli.com
 DOMAIN-SUFFIX,crocotube.com
 DOMAIN-SUFFIX,crossfire.co.kr
@@ -1494,6 +1502,7 @@ DOMAIN-SUFFIX,eulam.com
 DOMAIN-SUFFIX,eurekavpt.com
 DOMAIN-SUFFIX,euronews.com
 DOMAIN-SUFFIX,europa.eu
+DOMAIN-SUFFIX,eum-appdynamics.com
 DOMAIN-SUFFIX,evozi.com
 DOMAIN-SUFFIX,evschool.net
 DOMAIN-SUFFIX,exblog.co.jp
@@ -1558,6 +1567,7 @@ DOMAIN-SUFFIX,falunworld.net
 DOMAIN-SUFFIX,familyfed.org
 DOMAIN-SUFFIX,famunion.com
 DOMAIN-SUFFIX,fan-qiang.com
+DOMAIN-SUFFIX,fanbox.cc
 DOMAIN-SUFFIX,fandom.com
 DOMAIN-SUFFIX,fangbinxing.com
 DOMAIN-SUFFIX,fangeming.com
@@ -1620,6 +1630,7 @@ DOMAIN-SUFFIX,feitian-california.org
 DOMAIN-SUFFIX,feitianacademy.org
 DOMAIN-SUFFIX,feixiaohao.com
 DOMAIN-SUFFIX,feministteacher.com
+DOMAIN-SUFFIX,fengshows.cn
 DOMAIN-SUFFIX,fengzhenghu.com
 DOMAIN-SUFFIX,fengzhenghu.net
 DOMAIN-SUFFIX,fevernet.com
@@ -2334,6 +2345,7 @@ DOMAIN-SUFFIX,i-cable.com
 DOMAIN-SUFFIX,i-part.com.tw
 DOMAIN-SUFFIX,i-scmp.com
 DOMAIN-SUFFIX,i1.hk
+DOMAIN-SUFFIX,i1t.top
 DOMAIN-SUFFIX,i2p2.de
 DOMAIN-SUFFIX,i2runner.com
 DOMAIN-SUFFIX,i818hk.com
@@ -2427,6 +2439,7 @@ DOMAIN-SUFFIX,indianarrative.com
 DOMAIN-SUFFIX,indiandefensenews.in
 DOMAIN-SUFFIX,indiatimes.com
 DOMAIN-SUFFIX,indiemerch.com
+DOMAIN-SUFFIX,infura.io
 DOMAIN-SUFFIX,info-graf.fr
 DOMAIN-SUFFIX,informer.com
 DOMAIN-SUFFIX,initiativesforchina.org
@@ -3032,6 +3045,7 @@ DOMAIN-SUFFIX,milsurps.com
 DOMAIN-SUFFIX,mimiai.net
 DOMAIN-SUFFIX,mimivip.com
 DOMAIN-SUFFIX,mimivv.com
+DOMAIN-SUFFIX,mimestream.com
 DOMAIN-SUFFIX,mindrolling.org
 DOMAIN-SUFFIX,mingdemedia.org
 DOMAIN-SUFFIX,minghui-a.org
@@ -3098,6 +3112,7 @@ DOMAIN-SUFFIX,mohu.rocks
 DOMAIN-SUFFIX,mojim.com
 DOMAIN-SUFFIX,mol.gov.tw
 DOMAIN-SUFFIX,molihua.org
+DOMAIN-SUFFIX,momot.rs
 DOMAIN-SUFFIX,monar.ch
 DOMAIN-SUFFIX,mondex.org
 DOMAIN-SUFFIX,money-link.com.tw
@@ -3373,10 +3388,12 @@ DOMAIN-SUFFIX,now.im
 DOMAIN-SUFFIX,nownews.com
 DOMAIN-SUFFIX,nowtorrents.com
 DOMAIN-SUFFIX,noxinfluencer.com
+DOMAIN-SUFFIX,influxdata.com
 DOMAIN-SUFFIX,noypf.com
 DOMAIN-SUFFIX,npa.go.jp
 DOMAIN-SUFFIX,npa.gov.tw
 DOMAIN-SUFFIX,npm.gov.tw
+DOMAIN-SUFFIX,npmjs.org
 DOMAIN-SUFFIX,npnt.me
 DOMAIN-SUFFIX,nps.gov
 DOMAIN-SUFFIX,npsboost.com
@@ -3473,6 +3490,7 @@ DOMAIN-SUFFIX,okayfreedom.com
 DOMAIN-SUFFIX,okex.com
 DOMAIN-SUFFIX,okk.tw
 DOMAIN-SUFFIX,okx.com
+DOMAIN-SUFFIX,okx.com.cdn.cloudflare.net
 DOMAIN-SUFFIX,olabloga.pl
 DOMAIN-SUFFIX,old-cat.net
 DOMAIN-SUFFIX,olehdtv.com
@@ -3597,6 +3615,7 @@ DOMAIN-SUFFIX,parse.com
 DOMAIN-SUFFIX,parsevideo.com
 DOMAIN-SUFFIX,partycasino.com
 DOMAIN-SUFFIX,partypoker.com
+DOMAIN-SUFFIX,pass2u.net
 DOMAIN-SUFFIX,passion.com
 DOMAIN-SUFFIX,passiontimes.hk
 DOMAIN-SUFFIX,paste.ee
@@ -3912,6 +3931,7 @@ DOMAIN-SUFFIX,rateyourmusic.com
 DOMAIN-SUFFIX,rationalwiki.org
 DOMAIN-SUFFIX,rawgit.com
 DOMAIN-SUFFIX,raxcdn.com
+DOMAIN-SUFFIX,raycast.com
 DOMAIN-SUFFIX,razyboard.com
 DOMAIN-SUFFIX,rcinet.ca
 DOMAIN-SUFFIX,rd.com
@@ -4181,6 +4201,7 @@ DOMAIN-SUFFIX,shooshtime.com
 DOMAIN-SUFFIX,shop2000.com.tw
 DOMAIN-SUFFIX,shopee.tw
 DOMAIN-SUFFIX,shopping.com
+DOMAIN-SUFFIX,shortfryer.com
 DOMAIN-SUFFIX,showhaotu.com
 DOMAIN-SUFFIX,showtime.jp
 DOMAIN-SUFFIX,showwe.tw
@@ -4480,6 +4501,7 @@ DOMAIN-SUFFIX,tacem.org
 DOMAIN-SUFFIX,taconet.com.tw
 DOMAIN-SUFFIX,taedp.org.tw
 DOMAIN-SUFFIX,tafm.org
+DOMAIN-SUFFIX,tagss.pro
 DOMAIN-SUFFIX,tagwa.org.au
 DOMAIN-SUFFIX,tagwalk.com
 DOMAIN-SUFFIX,tahr.org.tw
@@ -4750,6 +4772,7 @@ DOMAIN-SUFFIX,tintuc101.com
 DOMAIN-SUFFIX,tiny.cc
 DOMAIN-SUFFIX,tinychat.com
 DOMAIN-SUFFIX,tinypaste.com
+DOMAIN-SUFFIX,tinyurl.com
 DOMAIN-SUFFIX,tipas.net
 DOMAIN-SUFFIX,tipo.gov.tw
 DOMAIN-SUFFIX,tipatipa.xyz
@@ -4812,6 +4835,7 @@ DOMAIN-SUFFIX,tracfone.com
 DOMAIN-SUFFIX,tradingview.com
 DOMAIN-SUFFIX,translate.goog
 DOMAIN-SUFFIX,transparency.org
+DOMAIN-SUFFIX,transak.com
 DOMAIN-SUFFIX,treemall.com.tw
 DOMAIN-SUFFIX,trendsmap.com
 DOMAIN-SUFFIX,trialofccp.org
