--- a/Github.conf
+++ b/Github.conf
@@ -6,4 +6,5 @@ DOMAIN-SUFFIX,githubapp.com
 DOMAIN-SUFFIX,githubassets.com
 DOMAIN-SUFFIX,githubusercontent.com
 DOMAIN-SUFFIX,github.blog
+DOMAIN-SUFFIX,ghcr.io
 DOMAIN-SUFFIX,rawgithub.com
