--- a/Twitter.conf
+++ b/Twitter.conf
@@ -4,5 +4,6 @@ DOMAIN-SUFFIX,twimg.co
 DOMAIN-SUFFIX,twimg.com
 DOMAIN-SUFFIX,twimg.org
 DOMAIN-SUFFIX,x.com
+DOMAIN-SUFFIX,x.ai
 DOMAIN-SUFFIX,twitter.com
 DOMAIN,browser-intake-datadoghq.com
