Update domain lists and create new configuration files
Updated the `ProxyList.conf` and `JetBrains.conf` by adding and removing specific domain suffixes. Created new configuration files `HK.conf`, `US.conf`, and `special.conf` to include additional domain suffixes, and added a new entry in `DirectList.conf` for a Chinese bank. Removed the `FinancialInstitution.conf` file.

更新域名列表并创建新的配置文件

通过添加和删除特定的域名后缀，更新了 `ProxyList.conf` 和 `JetBrains.conf`。创建了新的配置文件 `HK.conf`、`US.conf` 和 `special.conf` 以包含额外的域名后缀，并在 `DirectList.conf` 中为一家中国银行添加了新条目。删除了 `FinancialInstitution.conf` 文件。

--- a/BaseRule/DirectList.conf
+++ b/BaseRule/DirectList.conf
@@ -1,6 +1,9 @@
 # TAG
 DOMAIN-SUFFIX,warehouse.parkson-market.org
 
+#中国银行
+DOMAIN-SUFFIX,boc.cn
+
 # 财新
 DOMAIN-SUFFIX,caixin.cn
 DOMAIN-SUFFIX,caixin.com
