--- a/BaseRule/ProxyList.conf
+++ b/BaseRule/ProxyList.conf
@@ -1,12 +1,10 @@
 # 国外域名
 DOMAIN-SUFFIX,eu
-DOMAIN-SUFFIX,hk
 DOMAIN-SUFFIX,jp
 DOMAIN-SUFFIX,kr
 DOMAIN-SUFFIX,sg
 DOMAIN-SUFFIX,tw
 DOMAIN-SUFFIX,uk
-DOMAIN-SUFFIX,us
 DOMAIN-SUFFIX,ca
 # 国外域名关键字
 DOMAIN-KEYWORD,1e100
@@ -363,6 +361,7 @@ DOMAIN-SUFFIX,appspot.com
 DOMAIN-SUFFIX,appsto.re
 DOMAIN-SUFFIX,aptoide.com
 DOMAIN-SUFFIX,aqycenter.com
+DOMAIN-SUFFIX,arc.net
 DOMAIN-SUFFIX,archive.fo
 DOMAIN-SUFFIX,archive.is
 DOMAIN-SUFFIX,archive.li
@@ -558,6 +557,8 @@ DOMAIN-SUFFIX,binance.com
 DOMAIN-SUFFIX,binance.org
 DOMAIN-SUFFIX,binux.me
 DOMAIN-SUFFIX,binwang.me
+DOMAIN-SUFFIX,bibox.com
+DOMAIN-SUFFIX,bincheck.io
 DOMAIN-SUFFIX,bird.so
 DOMAIN-SUFFIX,bit-z.com
 DOMAIN-SUFFIX,bit.do
@@ -1042,6 +1043,7 @@ DOMAIN-SUFFIX,comparitech.com
 DOMAIN-SUFFIX,compileheart.com
 DOMAIN-SUFFIX,compress.to
 DOMAIN-SUFFIX,compython.net
+DOMAIN-SUFFIX,coffee-concepts.com
 DOMAIN-SUFFIX,quickconnect.to
 DOMAIN-SUFFIX,conoha.jp
 DOMAIN-SUFFIX,constitutionalism.solutions
@@ -2622,6 +2624,7 @@ DOMAIN-SUFFIX,jpopforum.net
 DOMAIN-SUFFIX,jqueryui.com
 DOMAIN-SUFFIX,jsdelivr.net
 DOMAIN-SUFFIX,jshell.net
+DOMAIN-SUFFIX,jsxgate.xyz
 DOMAIN-SUFFIX,jtvnw.net
 DOMAIN-SUFFIX,jubushoushen.com
 DOMAIN-SUFFIX,juhuaren.com
@@ -3356,6 +3359,7 @@ DOMAIN-SUFFIX,ninjacloak.com
 DOMAIN-SUFFIX,ninjaproxy.ninja
 DOMAIN-SUFFIX,nintendium.com
 DOMAIN-SUFFIX,ninth.biz
+DOMAIN-SUFFIX,nintendo.net
 DOMAIN-SUFFIX,nitter.cc
 DOMAIN-SUFFIX,nitter.net
 DOMAIN-SUFFIX,niu.moe
@@ -3424,6 +3428,7 @@ DOMAIN-SUFFIX,ntdtvla.com
 DOMAIN-SUFFIX,ntrfun.com
 DOMAIN-SUFFIX,ntsna.gov.tw
 DOMAIN-SUFFIX,ntu.edu.tw
+DOMAIN-SUFFIX,ntp.org
 DOMAIN-SUFFIX,nu.nl
 DOMAIN-SUFFIX,nubiles.net
 DOMAIN-SUFFIX,nudezz.com
@@ -3684,6 +3689,7 @@ DOMAIN-SUFFIX,pin-cong.com
 DOMAIN-SUFFIX,pin6.com
 DOMAIN-SUFFIX,pincong.rocks
 DOMAIN-SUFFIX,ping.fm
+DOMAIN-SUFFIX,ping0.cc
 DOMAIN-SUFFIX,pinimg.com
 DOMAIN-SUFFIX,pinkrod.com
 DOMAIN-SUFFIX,pinoy-n.com
@@ -5399,6 +5405,7 @@ DOMAIN-SUFFIX,wiredpen.com
 DOMAIN-SUFFIX,wireguard.com
 DOMAIN-SUFFIX,wisdompubs.org
 DOMAIN-SUFFIX,wisevid.com
+DOMAIN-SUFFIX,wise.com
 DOMAIN-SUFFIX,wistia.com
 DOMAIN-SUFFIX,witnessleeteaching.com
 DOMAIN-SUFFIX,witopia.net
@@ -5628,6 +5635,7 @@ DOMAIN-SUFFIX,youthforfreechina.org
 DOMAIN-SUFFIX,youthnetradio.org
 DOMAIN-SUFFIX,youthwant.com.tw
 DOMAIN-SUFFIX,youtu.be
+DOMAIN-SUFFIX,youtonghy.com
 DOMAIN-SUFFIX,youversion.com
 DOMAIN-SUFFIX,youwin.com
 DOMAIN-SUFFIX,youxu.info
@@ -5746,11 +5754,13 @@ DOMAIN-SUFFIX,mvnrepository.com
 DOMAIN-SUFFIX,quay.io
 DOMAIN-SUFFIX,reddit.com
 DOMAIN-SUFFIX,redhat.com
+DOMAIN-SUFFIX,rxjs.dev
 DOMAIN-SUFFIX,sonatype.org
 DOMAIN-SUFFIX,sourcegraph.com
 DOMAIN-SUFFIX,spring.io
 DOMAIN-SUFFIX,spring.net
 DOMAIN-SUFFIX,stackoverflow.com
+
 
 #Homebrew
 DOMAIN-SUFFIX,brew.sh
