--- a/JetBrains.conf
+++ b/JetBrains.conf
@@ -1,5 +1,7 @@
-DOMAIN-SUFFIX,intellij.net,DIRECT
-DOMAIN-SUFFIX,jetbrains.com.cn,DIRECT
-DOMAIN-SUFFIX,jetbrains.com,DIRECT
-DOMAIN-SUFFIX,jetbrains.com,DIRECT
-DOMAIN-SUFFIX,toolbox.app,DIRECT
+DOMAIN-SUFFIX,intellij.net
+DOMAIN-SUFFIX,jetbrains.com.cn
+DOMAIN-SUFFIX,jetbrains.com
+DOMAIN-SUFFIX,jetbrains.com
+DOMAIN-SUFFIX,jetbrains.ai
+DOMAIN-SUFFIX,toolbox.app
+
