--- a/BaseRule/HK.conf
+++ b/BaseRule/HK.conf
@@ -1,12 +1,13 @@
+DOMAIN-SUFFIX,hk
+
 # ZA BANK
 DOMAIN-SUFFIX,zafinsvc.com
 DOMAIN-SUFFIX,zajourney.com
 DOMAIN-SUFFIX,za.group
 
-#BOC CN
-DOMAIN-SUFFIX,boc.cn
 DOMAIN-SUFFIX,bochk.com
 
+DOMAIN-SUFFIX,hsbc.com.hk
 
 # 有争议（是否需要代理）
 # Controversial (whether a proxy is needed)
