Update domain lists in various configuration files
The commit removes specific domain entries from `ProxyList.conf` and adds new domain entries to `SG.conf` and `GB.conf`. It also updates the `US.conf` with additional domains and deletes the `ForeignMedia.conf` file.

将各种配置文件中的域列表更新

该提交从`ProxyList.conf`中删除了特定的域条目，并将新的域条目添加到`SG.conf`和`GB.conf`中。它还更新了`US.conf`，增加了额外的域，并删除了`ForeignMedia.conf`文件。

--- a/AreaRule/SG.conf
+++ b/AreaRule/SG.conf
@@ -1,4 +1,8 @@
 DOMAIN-SUFFIX,sg
 
+DOMAIN-SUFFIX,straitstimes.com
+DOMAIN-SUFFIX,businesstimes.com.sg
+DOMAIN-SUFFIX,gov.sg
+
 DOMAIN-SUFFIX,zaobao.com.sg
 DOMAIN-SUFFIX,zaobao.com
