--- a/AreaRule/US.conf
+++ b/AreaRule/US.conf
@@ -1,2 +1,6 @@
 DOMAIN-SUFFIX,us
 DOMAIN-SUFFIX,openrouter.ai
+
+DOMAIN-SUFFIX,newyorker.com
+DOMAIN-SUFFIX,newyorktimes.com
+DOMAIN-SUFFIX,nytimes.com
