Update domain list for The Telegraph and The Guardian
Moved `telegraph.co.uk` under The Telegraph section and added related domains. Also, expanded The Guardian's domain list to include additional subdomains.

更新《每日电讯报》和《卫报》的域名列表

将 `telegraph.co.uk` 移至《每日电讯报》部分，并添加相关域名。此外，扩展《卫报》的域名列表以包括其他子域名。

--- a/AreaRule/GB.conf
+++ b/AreaRule/GB.conf
@@ -13,7 +13,6 @@ DOMAIN-SUFFIX,dailymail.co.uk
 DOMAIN-SUFFIX,thetimes.co.uk
 DOMAIN-SUFFIX,independent.co.uk
 DOMAIN-SUFFIX,ft.com
-DOMAIN-SUFFIX,telegraph.co.uk
 DOMAIN-SUFFIX,amazon.co.uk
 DOMAIN-SUFFIX,gov.uk
 DOMAIN-SUFFIX,cam.ac.uk
@@ -21,3 +20,11 @@ DOMAIN-SUFFIX,ox.ac.uk
 
 # The Guardian
 DOMAIN-SUFFIX,theguardian.com
+DOMAIN-SUFFIX,guardianapis.com
+DOMAIN-SUFFIX,guim.co.uk
+
+# The Telegraph
+DOMAIN-SUFFIX,telegraph.co.uk
+DOMAIN-SUFFIX,newsuk.co.uk
+DOMAIN-SUFFIX,telegraph-cdn.com
+DOMAIN-SUFFIX,telegraphplayer.co.uk
