Add multiple news and media domain suffixes
Expanded the US.conf file to include a comprehensive list of domain suffixes for major American news and media organizations, ensuring broader coverage and more accurate rule application.

将多个新闻和媒体域名后缀添加到US.conf文件中，包含美国主要新闻和媒体组织的全面域名后缀列表，以确保更广泛的覆盖范围和更准确的规则应用。

--- a/AreaRule/US.conf
+++ b/AreaRule/US.conf
@@ -1,6 +1,71 @@
 DOMAIN-SUFFIX,us
 DOMAIN-SUFFIX,openrouter.ai
 
+
+
+# The New York Times
+DOMAIN-SUFFIX,nytimes.com
+DOMAIN-SUFFIX,nyt.com
+DOMAIN-SUFFIX,nytcn.me
+DOMAIN-SUFFIX,nytco.com
+DOMAIN-SUFFIX,nyt.net
 DOMAIN-SUFFIX,newyorker.com
 DOMAIN-SUFFIX,newyorktimes.com
-DOMAIN-SUFFIX,nytimes.com
+
+# The Information
+DOMAIN-SUFFIX,theinformation.com
+
+# The Wall Street Journal
+DOMAIN-SUFFIX,wsj.com
+DOMAIN-SUFFIX,dowjones.com
+DOMAIN-SUFFIX,barrons.com
+DOMAIN-SUFFIX,marketwatch.com
+
+# Bloomberg
+DOMAIN-SUFFIX,bloomberg.com
+DOMAIN-SUFFIX,bloomberg.net
+DOMAIN-SUFFIX,bloomberg.cn
+
+# CNN
+DOMAIN-SUFFIX,cnn.com
+DOMAIN-SUFFIX,cnn.io
+
+# Reuters
+DOMAIN-SUFFIX,reuters.com
+DOMAIN-SUFFIX,reutersmedia.net
+
+# The Washington Post
+DOMAIN-SUFFIX,washingtonpost.com
+
+# TIME
+DOMAIN-SUFFIX,time.com
+
+# NPR（National Public Radio）
+DOMAIN-SUFFIX,npr.org
+
+# Politico
+DOMAIN-SUFFIX,politico.com
+
+# VOX
+DOMAIN-SUFFIX,vox.com
+DOMAIN-SUFFIX,vox-cdn.com
+
+# Associated Press（美联社）
+DOMAIN-SUFFIX,apnews.com
+DOMAIN-SUFFIX,ap.org
+
+# Los Angeles Times
+DOMAIN-SUFFIX,latimes.com
+
+# ABC News (美国广播公司)
+DOMAIN-SUFFIX,abcnews.go.com
+
+# CBS News
+DOMAIN-SUFFIX,cbsnews.com
+
+# NBC News / MSNBC
+DOMAIN-SUFFIX,nbcnews.com
+DOMAIN-SUFFIX,msnbc.com
+
+# USA Today
+DOMAIN-SUFFIX,usatoday.com
