Add new domains to HK and Proxy lists, clean up US config
Added `hkjunkcall.com` to HK configuration and `uniohub.xyz` to the Proxy list. Also removed unnecessary blank lines in the US configuration for better clarity and consistency.

将新域名添加到香港和代理列表，清理美国配置

已将 `hkjunkcall.com` 添加到香港配置中，并将 `uniohub.xyz` 添加到代理列表中。同时，为了更清晰和一致，删除了美国配置中不必要的空行。

--- a/AreaRule/HK.conf
+++ b/AreaRule/HK.conf
@@ -15,3 +15,5 @@ DOMAIN-SUFFIX,stripe.com
 DOMAIN-SUFFIX,stripeassets.com
 DOMAIN-SUFFIX,stripecdn.com
 DOMAIN-SUFFIX,stripe.network
+
+DOMAIN-SUFFIX,hkjunkcall.com
