--- a/BaseRule/ProxyList.conf
+++ b/BaseRule/ProxyList.conf
@@ -5053,6 +5053,7 @@ DOMAIN-SUFFIX,underwoodammo.com
 DOMAIN-SUFFIX,unholyknight.com
 DOMAIN-SUFFIX,uni.cc
 DOMAIN-SUFFIX,unicode.org
+DOMAIN-SUFFIX,uniohub.xyz
 DOMAIN-SUFFIX,unification.net
 DOMAIN-SUFFIX,unification.org.tw
 DOMAIN-SUFFIX,unirule.cloud
