Add or update domain rules across multiple configuration files.
New domain rules have been added for various services, including Zoho, Figma, and modsbase. Some obsolete entries were removed, such as `files.oaiusercontent.com` and `fbcdn.net`, ensuring a more accurate and optimized configuration. These changes enhance the flexibility and coverage of domain routing.
在多个配置文件中添加或更新域规则。

已为各种服务添加了新的域规则，包括 Zoho、Figma 和 modsbase。移除了一些过时的条目，如 `files.oaiusercontent.com` 和 `fbcdn.net`，以确保配置更加准确和优化。这些更改增强了域路由的灵活性和覆盖范围。

--- a/BaseRule/DirectList.conf
+++ b/BaseRule/DirectList.conf
@@ -10,6 +10,7 @@ DOMAIN-SUFFIX,caixin.com
 
 DOMAIN-SUFFIX,zhihu.com
 DOMAIN-SUFFIX,immersivetranslate.com
+DOMAIN-SUFFIX,imappro.zoho.com
 DOMAIN-SUFFIX,ant.design
 DOMAIN-SUFFIX,opencat.app
 DOMAIN-SUFFIX,updf.com
@@ -32,6 +33,7 @@ PROCESS-NAME,WebTorrent Helper.exe
 PROCESS-NAME,qbittorrent.exe
 # bt
 DOMAIN-SUFFIX,smtp
+DOMAIN-SUFFIX,smtppro.zoho.com
 DOMAIN-SUFFIX,steamcontent.com
 DOMAIN-KEYWORD,aria2
 URL-REGEX,(Subject|HELO|SMTP)
