--- a/BaseRule/ProxyList.conf
+++ b/BaseRule/ProxyList.conf
@@ -1607,7 +1607,6 @@ DOMAIN-SUFFIX,fb.com
 DOMAIN-SUFFIX,fb.me
 DOMAIN-SUFFIX,fb.watch
 DOMAIN-SUFFIX,fbaddins.com
-DOMAIN-SUFFIX,fbcdn.net
 DOMAIN-SUFFIX,fbsbx.com
 DOMAIN-SUFFIX,fbworkmail.com
 DOMAIN-SUFFIX,fc2.com
@@ -1642,6 +1641,7 @@ DOMAIN-SUFFIX,ffvpn.com
 DOMAIN-SUFFIX,fgmtv.net
 DOMAIN-SUFFIX,fgmtv.org
 DOMAIN-SUFFIX,fhreports.net
+DOMAIN-SUFFIX,figma.com
 DOMAIN-SUFFIX,figprayer.com
 DOMAIN-SUFFIX,fileflyer.com
 DOMAIN-SUFFIX,fileforum.com
@@ -2464,6 +2464,7 @@ DOMAIN-SUFFIX,inthenameofconfuciusmovie.com
 DOMAIN-SUFFIX,inxian.com
 DOMAIN-SUFFIX,iownyour.biz
 DOMAIN-SUFFIX,iownyour.org
+DOMAIN-SUFFIX,ipa.store
 DOMAIN-SUFFIX,ipalter.com
 DOMAIN-SUFFIX,ipfire.org
 DOMAIN-SUFFIX,ipfs.io
@@ -3099,6 +3100,7 @@ DOMAIN-SUFFIX,mobileways.de
 DOMAIN-SUFFIX,moby.to
 DOMAIN-SUFFIX,mobypicture.com
 DOMAIN-SUFFIX,mod.io
+DOMAIN-SUFFIX,modsbase.com
 DOMAIN-SUFFIX,modernchinastudies.org
 DOMAIN-SUFFIX,moeaic.gov.tw
 DOMAIN-SUFFIX,moeerolibrary.com
@@ -3401,6 +3403,7 @@ DOMAIN-SUFFIX,nps.gov
 DOMAIN-SUFFIX,npsboost.com
 DOMAIN-SUFFIX,nradio.me
 DOMAIN-SUFFIX,nrk.no
+DOMAIN-SUFFIX,nssurge.com
 DOMAIN-SUFFIX,ns01.biz
 DOMAIN-SUFFIX,ns01.info
 DOMAIN-SUFFIX,ns01.us
@@ -3714,6 +3717,7 @@ DOMAIN-SUFFIX,pixnet.in
 DOMAIN-SUFFIX,pixnet.net
 DOMAIN-SUFFIX,pk.com
 DOMAIN-SUFFIX,pki.goog
+DOMAIN-SUFFIX,placecats.com
 DOMAIN-SUFFIX,placemix.com
 DOMAIN-SUFFIX,playboy.com
 DOMAIN-SUFFIX,playboyplus.com
@@ -4803,6 +4807,7 @@ DOMAIN-SUFFIX,tomonews.net
 DOMAIN-SUFFIX,tongil.or.kr
 DOMAIN-SUFFIX,tono-oka.jp
 DOMAIN-SUFFIX,tonyyan.net
+DOMAIN-SUFFIX,tonyding.net
 DOMAIN-SUFFIX,toodoc.com
 DOMAIN-SUFFIX,toonel.net
 DOMAIN-SUFFIX,top.tv
@@ -5086,6 +5091,7 @@ DOMAIN-SUFFIX,urchin.com
 DOMAIN-SUFFIX,url.com.tw
 DOMAIN-SUFFIX,urlborg.com
 DOMAIN-SUFFIX,urlparser.com
+DOMAIN-SUFFIX,us4
 DOMAIN-SUFFIX,us.to
 DOMAIN-SUFFIX,usacn.com
 DOMAIN-SUFFIX,usaip.eu
@@ -5707,6 +5713,8 @@ DOMAIN-SUFFIX,zkiz.com
 DOMAIN-SUFFIX,zmw.cn
 DOMAIN-SUFFIX,zodgame.us
 DOMAIN-SUFFIX,zoho.com
+DOMAIN-SUFFIX,zohocdn.com
+DOMAIN-SUFFIX,zohopublic.com
 DOMAIN-SUFFIX,zomobo.net
 DOMAIN-SUFFIX,zonaeuropa.com
 DOMAIN-SUFFIX,zonghexinwen.com
@@ -5747,6 +5755,7 @@ DOMAIN-SUFFIX,jitpack.io
 DOMAIN-SUFFIX,maven.org
 DOMAIN-SUFFIX,medium.com
 DOMAIN-SUFFIX,mvnrepository.com
+DOMAIN-SUFFIX,mvalpay.com
 DOMAIN-SUFFIX,quay.io
 DOMAIN-SUFFIX,reddit.com
 DOMAIN-SUFFIX,redhat.com
