--- a/JetBrains.conf
+++ b/JetBrains.conf
@@ -1,5 +1,6 @@
 DOMAIN-SUFFIX,intellij.net
 DOMAIN-SUFFIX,jetbrains.com.cn
+DOMAIN-SUFFIX,jb.gg
 DOMAIN-SUFFIX,jetbrains.com
 DOMAIN-SUFFIX,jetbrains.com
 DOMAIN-SUFFIX,jetbrains.ai
